# finance

./: .gitignore  Cargo.toml  resp_example.jsonc
.github/workflows/: ci.yaml  ci.yml
src/: lib.rs  main.rs
src/util/: detail_resp_err.rs  mod.rs
src/yahoo_finance/: error.rs  mod.rs  parse_resp.rs  stock_price.rs  yahoo_finance_resp.rs
